--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="card" [routerLink]="post.navigable ? ['/' + post.type + '/' + post.id] : []">
+<div class="card" (click)="cardClicked(post)" [routerLink]="post.navigable ? ['/' + post.type + '/' + post.id] : []">
     <div class="card-image-wrapper">
         <img src="{{post.imageUrl}}" alt="{{post.header}}" />
     </div>
