--- a/src/app/pages/blog-page/blog-page.component.html
+++ b/src/app/pages/blog-page/blog-page.component.html
@@ -1,6 +1,8 @@
 <div class="container mx-auto">
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 items-stretch m-3 lg:p-0">
-        <app-card *ngFor="let post of blogPosts$ | async" [post]="post"></app-card>
+        <app-card *ngFor="let post of blogPosts$ | async" [post]="post"
+            (selectedPostEvent)="selectPostEventHandler($event)">
+        </app-card>
     </div>
 
     <div class="back-to-top-wrapper">
