--- a/src/app/components/detail-page-nav-bar/detail-page-nav-bar.component.html
+++ b/src/app/components/detail-page-nav-bar/detail-page-nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="detail-page-menu-bar flex flex-row bg-teal-500 items-center text-white">
+<div class="detail-page-menu-bar flex flex-row bg-teal-500 items-center text-white z-10">
     <div class="basis-1/4 p-6">
         <a routerLink="../">
             <fa-icon [icon]="['fas', 'arrow-left']" size="lg"></fa-icon>
