--- a/src/app/pages/blog-detail/blog-detail.component.scss
+++ b/src/app/pages/blog-detail/blog-detail.component.scss
@@ -26,9 +26,11 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 100%;
     position: absolute;
-    top: 0;
+
+    // Exclude the top bar.
+    top: calc(global.$top-nav-bar-height / 2);
+    height: calc(100% - global.$top-nav-bar-height / 2);
 }
 
 .top-image-wrapper>* {
