--- a/src/app/pages/blog-detail/blog-detail.component.html
+++ b/src/app/pages/blog-detail/blog-detail.component.html
@@ -1,5 +1,5 @@
 <app-detail-page-nav-bar [title]="(active$ |async)?.header"></app-detail-page-nav-bar>
-<div *ngIf="(active$ | async) as post; else loading">
+<div *ngIf="(active$ | async) as post; else loading" class="w-full">
     <div class="top-image-wrapper">
         <img class="image" src="{{post.imageUrl}}" alt="{{post.header}}" aria-label="Image supporting post" />
 
@@ -8,6 +8,13 @@
             <h2 class="text-xl">{{post.subHeader}}</h2>
         </div>
     </div>
+
+    <div class="container mx-auto p-4">
+        <markdown>
+            {{post.body}}
+        </markdown>
+    </div>
+
 </div>
 
 <ng-template #loading>
