--- a/src/app/pages/blog-detail/blog-detail.component.html
+++ b/src/app/pages/blog-detail/blog-detail.component.html
@@ -1,16 +1,20 @@
-<app-detail-page-nav-bar [title]="(active$ |async)?.header"></app-detail-page-nav-bar>
-<div *ngIf="(active$ | async) as post; else loading" class="w-full">
+<app-detail-page-nav-bar [title]="(active$ |async)?.header" class="fixed w-full z-20"></app-detail-page-nav-bar>
+<div *ngIf="(active$ | async) as post; else loading" class="w-full relative top-10">
     <div class="top-image-wrapper">
         <img class="image" src="{{post.imageUrl}}" alt="{{post.header}}" aria-label="Image supporting post" />
 
-        <div class="text-container p-4 lg:p-2">
-            <h1 class="text-3xl">{{post.header}}</h1>
+        <div class="text-container p-4 lg:p-2 text-center">
+            <h1 class=" text-3xl">{{post.header}}</h1>
             <h2 class="text-xl">{{post.subHeader}}</h2>
         </div>
     </div>
 
-    <div class="container mx-auto p-4">
-        <markdown>
+    <div class="container mx-auto p-4 blog-content">
+        <markdown class="introduction">
+            {{post.introduction}}
+        </markdown>
+        <hr />
+        <markdown class="body">
             {{post.body}}
         </markdown>
     </div>
