Adds object-fir for card image

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -6,6 +6,7 @@ $card-image-height: 215px;
 .card-image-wrapper>img {
     height: $card-image-height;
     width: 100%;
+    object-fit: cover;
 }
 
 .card {
