--- a/src/app/pages/blog-detail/blog-detail.component.html
+++ b/src/app/pages/blog-detail/blog-detail.component.html
@@ -14,6 +14,8 @@
             {{post.introduction}}
         </markdown>
         <hr />
+        <app-leaflet-map></app-leaflet-map>
+        <hr />
         <markdown class="body">
             {{post.body}}
         </markdown>
