Makes map component a tiny bit smaller, adds some padding to marker

--- a/src/app/components/map/leaflet-marker-popup/leaflet-marker-popup.component.html
+++ b/src/app/components/map/leaflet-marker-popup/leaflet-marker-popup.component.html
@@ -1,4 +1,4 @@
 <h1>{{geoLocation.geoLocationName}}</h1>
-<div class="">
+<div class="leaflet-image-container">
     <img src="../../../../assets/2022Dakota/landscape-1.jpg" width="100px" />
 </div>
