--- a/src/app/components/photo-slider/photo-slider.component.scss
+++ b/src/app/components/photo-slider/photo-slider.component.scss
@@ -7,8 +7,8 @@
 }
 
 .image-wrapper,
-.image-wrapper>img {
-    max-width: 1024px;
+.image-wrapper>*>img {
+    object-fit: contain;
 }
 
 .background-wrapper>section {
