--- a/src/app/pages/about-page/about-page.component.scss
+++ b/src/app/pages/about-page/about-page.component.scss
@@ -1,4 +1,5 @@
 @use 'src/app/shared/variables' as global;
+@use 'src/app/shared/parallax' as parralax;
 
 /** Tailwind LG screen */
 @media (min-width: 1024px) {
