Refactors the slideshow to the photo slider component rather than the progress slider component.

--- a/src/app/components/photo-slider/photo-slider.component.html
+++ b/src/app/components/photo-slider/photo-slider.component.html
@@ -1,5 +1,5 @@
-<app-progress-slider (hasAnimationCompletedEvent)="slideshowAnimationComplete()"
-    [shouldAnimate$]="shouldAnimateCountdown$" [duration]="6000"></app-progress-slider>
+<app-progress-slider *ngIf="options && options.slideshow" [percentage$]="slideshowAnimationPercentage$">
+</app-progress-slider>
 <div class="background-wrapper flex justify-center">
     <section class="items-center basis-1/12">
         <fa-icon [icon]="['fas', 'chevron-left']" size="lg" (click)="togglePreviousImage()"
