Makes height of photo slider component configurable

--- a/src/app/components/photo-slider/photo-slider.component.html
+++ b/src/app/components/photo-slider/photo-slider.component.html
@@ -1,6 +1,6 @@
 <app-progress-slider *ngIf="options && options.slideshow" [percentage$]="slideshowAnimationPercentage$">
 </app-progress-slider>
-<div class="background-wrapper flex justify-center">
+<div class="background-wrapper flex justify-center" [ngStyle]="{'height.px': componentHeight}">
     <section class="items-center basis-1/12">
         <fa-icon [icon]="['fas', 'chevron-left']" size="lg" (click)="togglePreviousImage()"
             *ngIf="activeImageIndex > 0">
