Minor refactor of slideshow options model

--- a/src/app/components/photo-slider/photo-slider.component.html
+++ b/src/app/components/photo-slider/photo-slider.component.html
@@ -1,4 +1,5 @@
-<app-progress-slider *ngIf="options && options.slideshow" [percentage$]="slideshowAnimationPercentage$">
+<app-progress-slider *ngIf="options && options.slideshow && options.slideshow.display"
+    [percentage$]="slideshowAnimationPercentage$">
 </app-progress-slider>
 <div class="background-wrapper flex justify-center" [ngStyle]="{'height.px': componentHeight}">
     <section class="items-center basis-1/12">
