--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,1 @@
-<app-photo-slider [images$]="images$" [options]="{slideshow: true}"></app-photo-slider>
+<app-photo-slider [images$]="images$" [options]="{slideshow: { display: true }}"></app-photo-slider>
