--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,7 +1,11 @@
-<div class="full-page-container direction-column">
+<div class="full-page-container">
     <img src="/assets/404.jpg" alt="404-background" aria-label="background-image" />
-    <span class="text-5xl">Whoa there, sailor!</span>
-    <span>You are in uncharted waters, and probably should head back to safety.</span>
 
-    <button class="backToSafety" [routerLink]="['/']"> back to safety</button>
+    <div class="content direction-column">
+        <span class="text-3xl lg:text-5xl">Whoa there, sailor!</span>
+        <span>You are in uncharted waters, and probably should head back to safety.</span>
+
+        <button class="backToSafety" [routerLink]="['/']"> back to safety</button>
+    </div>
+
 </div>
