Fixes grammatical error

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -3,7 +3,7 @@
 
     <div class="content direction-column">
         <span class="text-3xl lg:text-5xl">Whoa there, sailor!</span>
-        <span>You are in uncharted waters, and probably should head back to safety.</span>
+        <span>You are in uncharted waters, and should head back to safety.</span>
 
         <button class="backToSafety" [routerLink]="['/']"> back to safety</button>
     </div>
