--- a/src/app/components/photo-slider/photo-slider.component.scss
+++ b/src/app/components/photo-slider/photo-slider.component.scss
@@ -10,6 +10,10 @@
     object-fit: contain;
 }
 
+.image-wrapper div {
+    justify-content: center;
+}
+
 .background-wrapper>section {
     display: flex;
     justify-content: center;
