--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <div class="full-page-container">
-    <img src="/assets/404.jpg" alt="404-background" aria-label="background-image" />
+    <img src="../../assets/404.jpg" alt="404-background" aria-label="background-image" />
 
     <div class="content direction-column">
         <span class="text-3xl lg:text-5xl">Whoa there, sailor!</span>
