--- a/src/app/components/photo-slider/photo-slider.component.scss
+++ b/src/app/components/photo-slider/photo-slider.component.scss
@@ -31,3 +31,28 @@ fa-icon {
 .image-wrapper .hidden {
     display: none;
 }
+
+.dot-container {
+    bottom: 0px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    width: 50%;
+    padding: 4px;
+}
+
+.dot {
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    background: white;
+    opacity: 0.4;
+    margin: 0 2px;
+    transition: 1s all ease;
+}
+
+.dot-container>.active {
+    transition: 1s all ease;
+    opacity: 1;
+    background-color: global.$primary-color;
+}
