Cursor pointer on dots

--- a/src/app/components/photo-slider/photo-slider.component.scss
+++ b/src/app/components/photo-slider/photo-slider.component.scss
@@ -49,6 +49,7 @@ fa-icon {
     opacity: 0.4;
     margin: 0 2px;
     transition: 1s all ease;
+    cursor: pointer;
 }
 
 .dot-container>.active {
