Implements scrolling slider on page

--- a/src/app/components/progress-slider/progress-slider.component.scss
+++ b/src/app/components/progress-slider/progress-slider.component.scss
@@ -1,6 +1,5 @@
 @use 'src/app/shared/variables' as global;
 
-
 .indicator-container {
     height: 5px;
     width: 100%;
@@ -8,7 +7,8 @@
 }
 
 .indicator-container .bar {
-    background-color: global.$primary-color;
+    // background-color: global.$primary-color;
+    background-color: yellow;
     height: 100%;
     width: 2%;
 }
