--- a/src/app/pages/blog-detail/blog-detail.component.html
+++ b/src/app/pages/blog-detail/blog-detail.component.html
@@ -1,4 +1,5 @@
 <app-detail-page-nav-bar [title]="(active$ |async)?.header" class="fixed w-full z-20"></app-detail-page-nav-bar>
+<app-progress-slider [percentage$]="scrollPercentage$" [hexColor]="'#FFFF00'"></app-progress-slider>
 <div *ngIf="(active$ | async) as post; else loading" class="w-full relative top-10">
     <div class="top-image-wrapper">
         <img class="image" src="{{post.imageUrl}}" alt="{{post.header}}" aria-label="Image supporting post"
