--- a/src/app/components/progress-slider/progress-slider.component.scss
+++ b/src/app/components/progress-slider/progress-slider.component.scss
@@ -7,8 +7,7 @@
 }
 
 .indicator-container .bar {
-    // background-color: global.$primary-color;
-    background-color: yellow;
+    background-color: global.$primary-color;
     height: 100%;
     width: 2%;
 }
