--- a/src/app/pages/about-page/about-page.component.html
+++ b/src/app/pages/about-page/about-page.component.html
@@ -1,7 +1,7 @@
 <main>
     <section class="image-overlay-landing-screen flex relative" id="about-story-landing">
         <div class="image-with-overlay-container">
-            <img class="bg-blend-darken" src="{{baseUrl}}/about-page/The-Martens-423.jpg" lazy-loading />
+            <img class="bg-blend-darken" src="{{baseUrl}}/about-page/The-Martens-423.jpg" appLazyLoading />
             <div class="image-overlay"></div>
         </div>
 
