--- a/src/app/components/gallery-item/gallery-item.component.html
+++ b/src/app/components/gallery-item/gallery-item.component.html
@@ -4,7 +4,7 @@
         <span class="gallery-item-info p-2 top-0"
             *ngIf="this.isGallery; else animationHeader">{{galleryItem.title}}</span>
 
-        <img src="{{galleryItem.imageUrl}}" alt="{{galleryItem.title}}" (load)="this.isLoading = false;" lazy-loading>
+        <img src="{{galleryItem.imageUrl}}" alt="{{galleryItem.title}}" (load)="this.isLoading = false;" appLazyLoading>
 
         <div class="gallery-item-author-info gallery-item-info gallery-info-animationable bottom-0 p-2"
             *ngIf="isGalleryImage()">
