--- a/src/app/pages/blog-detail/blog-detail.component.html
+++ b/src/app/pages/blog-detail/blog-detail.component.html
@@ -5,7 +5,7 @@
 <div *ngIf="(active$ | async) as post; else loading" class="w-full relative top-10">
     <div class="top-image-wrapper">
         <img class="image" src="{{post.imageUrl}}" alt="{{post.header}}" aria-label="Image supporting post"
-            lazy-loading />
+            appLazyLoading />
 
         <div class="text-container p-4 lg:p-2 text-center">
             <h1 class=" text-3xl">{{post.header}}</h1>
